# Mandelbrot.site

./: .dockerignore  .gitattributes  .gitignore  .nvmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clean.sh
.cargo/: config.toml
.github/workflows/: bench-smoke.yml  code-quality.yml  contributors.yml  deploy.yml  lint.yml  release.yml  tests.yml
bench/: LOG.md  README.md  anchor.json  package-lock.json  package.json
bench/corpus/: corpus.json  grid-multibrot.json  grid-regression.json  hi-border.json  hi-iter-direct-grid.json  hi-iter-direct.json
bench/page/: bench.js  grid-worker.js  index.html
bench/src/: build-dist.mjs  build.mjs  compare.mjs  enrich.mjs  ingest.mjs  normalize.mjs  pixel-check.mjs  run-e2e.mjs  run-grid.mjs  run.mjs  server.mjs  session.mjs  stats.mjs  tolerance.mjs  validate.mjs
client/: .eslintrc.js  .nvmrc  build-relaxed-wasm.js  generate-sw.js  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vercel.json  webpack.config.js
client/app/: MandelbrotLayer.ts  MandelbrotMap.ts  main.ts  static.ts  utils.js  worker.js  worker.ts
client/blog/: history-of-mandelbrot-set.md  how-mandelbrot-site-was-built.md  what-is-mandelbrot-set.md  who-was-benoit-mandelbrot.md  why-mandelbrot-set-important.md
client/css/: normalize.css  styles.css  styles.scss
client/html/: blog-template.html  index.html  privacy-policy.html
client/js/: ConfirmModal.ts  FormModal.ts  ImageSaver.ts  JuliaPanel.ts  MandelbrotControls.ts  MandelbrotLayer.ts  (+25 more)
crate-wasm/: Cargo.toml
deploy/: nginx.conf
example-images/: README.md
mandelbrot/: Cargo.toml  package-lock.json
mandelbrot/examples/: palette_preview.rs
mandelbrot/src/: float_exp.rs  float_exp_test.rs  lib.rs  lib_test.rs  main.rs  mod.rs  perturbation.rs  perturbation_test.rs  utils.rs
mandelbrot/src/snapshots/: mandelbrot__lib_test__lib_test__snapshot0.snap  mandelbrot__lib_test__lib_test__snapshot1.snap  mandelbrot__lib_test__lib_test__snapshot2.snap  mandelbrot__lib_test__lib_test__snapshot3.snap  mandelbrot__lib_test__lib_test__snapshot4.snap  mandelbrot__lib_test__lib_test__snapshot5.snap  mandelbrot__lib_test__lib_test__snapshot6.snap  mandelbrot__lib_test__lib_test__snapshot7.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_100_inferno_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_100_inferno_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_100_turbo_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_100_turbo_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_50_inferno_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_50_inferno_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_50_turbo_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_2_50_turbo_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_100_inferno_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_100_inferno_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_100_turbo_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_100_turbo_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_50_inferno_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_50_inferno_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_50_turbo_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_100_3_50_turbo_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0.5_Hsl.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0.5_Hsl_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0.5_Hsl_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0.5_Lch.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0.5_Lch_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0.5_Lch_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0_Hsl.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0_Hsl_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0_Hsl_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0_Lch.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0_Lch_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0.5_0_Lch_true.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0_0.5_Hsl.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0_0.5_Hsl_false.snap  mandelbrot__lib_test__lib_test__snapshot_0_200_2_100_inferno_false_0_0_0.5_Hsl_true.snap  (+2631 more)
wasm-worker/: .travis.yml  clean.sh
wasm-worker/crate-wasm/: Cargo.toml
wasm-worker/crate-wasm/src/: lib.rs
www/: .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+22 files in other folders)
