[package]
authors = ["Ross Hill"]
categories = ["wasm"]
description = "Generates Mandelbrot set images"
name = "mandelbrot"
readme = "./README.md"
repository = "https://github.com/rosslh/rust-mandelbrot-set"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.68"
num = "0.3.1"
itertools-num = "0.1.3"
colorous = "1.0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3", features = ["console"] }
insta = "1.34.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
image = "0.23.12"

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
