[package]
authors = ["Ross Hill"]
categories = ["wasm"]
description = "Generates Mandelbrot set images"
name = "mandelbrot"
readme = "../README.md"
repository = "https://github.com/rosslh/Mandelbrot.site"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
colorous = "1.0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
insta = "1.34.0"
itertools-num = "0.1.3"
num = "0.3.1"
once_cell = "1.8.0"
palette = { version = "0.7.6" }
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
image = "0.23.12"
rayon = "1.10.0"

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
