[package]
authors = ["Ross Hill"]
categories = ["wasm"]
description = "Generates Mandelbrot set images"
name = "mandelbrot"
readme = "../README.md"
repository = "https://github.com/rosslh/Mandelbrot.site"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
colorous = "1.0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
dashu = "0.4.4"
insta = "1.34.0"
itertools-num = "0.1.3"
num = "0.3.1"
once_cell = "1.8.0"
palette = { version = "0.7.6" }
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
image = "0.23.12"
rayon = "1.10.0"

[features]
default = ["console_error_panic_hook"]

# --enable-relaxed-simd is needed by the dual-build fast artifact
# (client/build-relaxed-wasm.js builds pkg-relaxed with
# -C target-feature=+simd128,+relaxed-simd); on the simd128-only fallback
# build wasm-opt's output is byte-identical with or without the flag
# (verified 2026-07-10), so one flag list serves both builds.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd", "--enable-relaxed-simd", "--enable-mutable-globals"]

# Used by bench/ variant builds, which run their own wasm-opt pass with
# per-variant flags. Does not affect production (webpack uses --release).
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
