[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome WebAssembly crate!"
license = "Apache-2.0/MIT"
name = "crate-wasm"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-wasm-worker-template"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.2"
cfg-if = "1.0.0" #latest 2020-11-20
wasm-bindgen = "0.2.68" #latest 2020-11-20
num = "0.3.1"
image = "0.23.12"
itertools-num = "0.1.3"
colorous = "1.0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true } #latest 2020-11-20

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true } #latest 2020-11-20

web-sys = { version = "0.3", features = ["console"] } #latest 2020-11-20

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]